AntlrCSharp/langName.g4
grammar langName;

/* Parser Rules */
input            : statement+ EOF;

statement        : expression 
                 | ifStatement
                 | whileStatement
                 | variableDeclaration
                 | variableAssignment
                 | forLoop
                 | crementer
                 | arrayDeclaration 
                 | arrayDeclaration2d
                 | arrayAssignement
                 | arrayAccess
                 | arrayAssignment2d
                 | arrayAccess2d
                 | breakStatement
                 | fileWriteStatement
                 | fileWriteNewline
                 | mapDeclaration
                 | mapPrint
                 | mapModification
                 | mapWrite
                 | mapBSP
                 | mapObject;

expression       : term
                 | expression OPERATOR1 term
                 | expression COMPARISON_OPERATOR term
                 | IDENTIFIER
                 | STRING_LITERAL 
                 | BOOLEAN_LITERAL
                 | CHARACTER_LITERAL
                 | DOUBLE_LITERAL
                 | arrayAccess
                 | arrayAccess2d
                 | randomStatement
                 | mapPrint;

term             : factor
                 | term OPERATOR2 factor
                 | IDENTIFIER
                 | STRING_LITERAL
                 | BOOLEAN_LITERAL
                 | CHARACTER_LITERAL
                 | DOUBLE_LITERAL
                 | arrayAccess
                 | arrayAccess2d
                 | randomStatement
                 | mapPrint;

factor           : number
                 | '(' expression ')'
                 | IDENTIFIER
                 | STRING_LITERAL
                 | BOOLEAN_LITERAL
                 | CHARACTER_LITERAL
                 | DOUBLE_LITERAL
                 | arrayAccess
                 | arrayAccess2d
                 | randomStatement
                 | mapPrint;

number           : NUMBER;

ifStatement      : 'if' '(' expression (BOOLEANOPERATORS expression)* ')' '{'  statement+ '}'  (ELSE '{' statement+ '}')?;

whileStatement   : 'while' '(' expression ')' '{' statement+ '}' ;

variableDeclaration : TYPE IDENTIFIER '=' (expression | mapTest);
variableAssignment : IDENTIFIER '=' expression;

forLoop            : 'for' '(' variableDeclaration ';' compare ';' crementer ')' '{' statement+ '}';
crementer          : IDENTIFIER INCREMENTER| IDENTIFIER DECREMENTER;
compare            : expression COMPARISON_OPERATOR term;

arrayDeclaration   : TYPE IDENTIFIER LEFTARRAYBRACKET (number|IDENTIFIER) RIGHTARRAYBRACKET ('=' LEFTCURLYBRACKET (expression (',' expression)*)? RIGHTCURLYBRACKET)?;
arrayAssignement   : IDENTIFIER LEFTARRAYBRACKET (number|IDENTIFIER) RIGHTARRAYBRACKET '=' expression;
arrayAccess        : IDENTIFIER LEFTARRAYBRACKET (number|IDENTIFIER) RIGHTARRAYBRACKET;
arrayDeclaration2d : TYPE IDENTIFIER LEFTARRAYBRACKET (number|IDENTIFIER) ',' (number|IDENTIFIER) RIGHTARRAYBRACKET ('=' '{' LEFTCURLYBRACKET (expression (',' expression)*)? RIGHTCURLYBRACKET (',' LEFTCURLYBRACKET (expression (',' expression)*)? RIGHTCURLYBRACKET)* '}' )?;
arrayAssignment2d  : IDENTIFIER LEFTARRAYBRACKET (number|IDENTIFIER) ',' (number|IDENTIFIER) RIGHTARRAYBRACKET '=' expression;
arrayAccess2d      : IDENTIFIER LEFTARRAYBRACKET (number|IDENTIFIER) ',' (number|IDENTIFIER) RIGHTARRAYBRACKET;

breakStatement     : BREAK;
randomStatement    : RANDOM '(' (number|expression) ',' (number|expression) ')';
fileWriteStatement : 'fileWrite' '(' (arrayAccess2d|CHARACTER_LITERAL) ',' STRING_LITERAL ')';
fileWriteNewline   : 'fileWriteNewline' '(' STRING_LITERAL ')';

mapDeclaration     : TYPE IDENTIFIER '(' NUMBER ')' '(' NUMBER ')' '(' NUMBER ')' '=' STRING_LITERAL (',' STRING_LITERAL)*;
mapPrint           : 'print' IDENTIFIER '(' STRING_LITERAL ')';
mapModification    : 'modify' IDENTIFIER '(' STRING_LITERAL ')' '=' IDENTIFIER;
mapWrite           : 'write' IDENTIFIER;

mapBSP             : 'bsp' IDENTIFIER '(' STRING_LITERAL ')' '=' NUMBER;
mapObject          : 'object' IDENTIFIER '(' STRING_LITERAL ')' '(' STRING_LITERAL ')' '=' 'randomObjectPlacer(' NUMBER ', ' CHARACTER_LITERAL ')';
mapTest            : 'dijkstra' '(' IDENTIFIER ',' STRING_LITERAL ',' STRING_LITERAL ')';  

/* Lexer Rules */
NUMBER           : [0-9]+ ;
OPERATOR1        : ('+' | '-' ) ;
OPERATOR2        : ('/' | '*');
BOOLEANOPERATORS : ('||'| '&&');
COMPARISON_OPERATOR: ('>' | '<' | '==' | '!=' | '>=' | '<='); 
BOOLEAN_LITERAL  : ('true'|'false');
BREAK            : 'BREAK';
RANDOM           : 'RANDOM';
EQUALS           : '=';
LEFTARRAYBRACKET : '[';
RIGHTARRAYBRACKET: ']';
LEFTCURLYBRACKET : '{';
RIGHTCURLYBRACKET: '}';
IDENTIFIER       : [a-zA-Z][a-zA-Z0-9]*;
DOUBLE_LITERAL   : [0-9]+ '.' [0-9]+ ;
INCREMENTER      : '++';
DECREMENTER      : '--';
WHITESPACE       : (' '|'\t')+ -> skip;
NEWLINE          : ('\n'| '\r')+ -> skip;
CHARACTER_LITERAL: '\'' . '\'';
STRING_LITERAL   : '"' ( ~["\\\r\n] | '\\' . )* '"';


/*TYPE declarations */
TYPE             : ('int '|'double '|'string ' | 'boolean '| 'char ' | 'map ');
ELSE             : 'else ';
